src/ariel-os-macros/tests/ui/hook/missing_hook.rs
#![no_main]

// FAIL: missing hook
#[ariel_os::hook]
fn usb_builder() {}
